<resources>
    <string name="app_name">ProyectoComunitario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_reportes">Tus Reportes</string>
    <string name="menu_quejas">Quejas</string>
    <string name="menu_propuesta">Propuestas</string>
    <string name="tus_eventos">Tus eventos</string>
    <string name="vacio"></string>
    <string name="quejas_nuevas">Nueva Queja</string>
    <string name="nueva_propuesta">Nueva Propuesta</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>