<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_proyectos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_proyectos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/nav_quejas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quejas" />
        <item
            android:id="@+id/nav_propuesta"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_propuesta" />

    </group>
</menu>